Fixed search and filter buttons clipping.
I have also moved inline styles to style.css and removed unecessary styles.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -1587,7 +1587,7 @@ header td {
   & ul {
     display: flex;
     flex-direction: row;
-    margin: 0;
+    margin: 0.5em;
     padding: 0;
     list-style: none;
     align-items: center;
@@ -1619,10 +1619,6 @@ header td {
 
 .navButt {
   vertical-align: middle;
-}
-.filterButt{
-  margin-top: 11px;
-  margin-block-end: 7px;
 }
 
 /*Needed because navButt applies a clicking effect on the element*/
@@ -5734,7 +5730,6 @@ rect[class*="activitymarker"]:hover {
 }
 #searchbar button#searchbutton,
 #searchbar button#searchbuttonicon{
-  padding: 8px 20px 5px 20px;
   background:#76578e;
   border-left: none;
   cursor: pointer;
@@ -5794,16 +5789,11 @@ rect[class*="activitymarker"]:hover {
 #searchbutton,
 #searchbuttonMobile {
   position: relative;
-  width: 26px;
-  height: 25px;
   margin: 0;
-  padding: 4px;
   border-radius: 0;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   box-shadow: none !important;
-  margin-bottom: 5px;
-  margin-right: 2px;
 }
 
 
@@ -5811,12 +5801,6 @@ rect[class*="activitymarker"]:hover {
 #searchBar img,
 #testSearchContainer img {
   margin: 0px;
-}
-
-#lookingGlassSVG {
-  top: 3px;
-  left: 3px;
-  transform: scale(1.5);
 }
 
 /* styling for fileed switching table button*/
@@ -5827,8 +5811,6 @@ rect[class*="activitymarker"]:hover {
   text-align: center;
   background-color: var(--color-primary);
   color: var(--color-primary);
-  padding: 6px;
-  margin: 1px;
   border-radius: 2px;
   border: 0px;
   cursor: pointer;
